<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AugmentCare</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_reset_password">RESET PASSWORD</string>
    <string name="title_signup">REGISTER</string>
    <string name="placeholder_email_optional">Email (Optional)</string>
    <string name="placeholder_email_mobile">Email / Mobile</string>
    <string name="prompt_password">Password*</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_not_found">Unable to find user with this email </string>
    <string name="message_email_sent">An email is sent to you about instructions How to reset Password</string>
    <string name="error_message_failed_to_login">Invalid login credentials. Please try again.</string>
    <string name="error_message_failed_to_fetch">Failed to fetch details from server</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="depenents_array">
        <item>Dependent Type</item>
        <item>Mother</item>
        <item>Father</item>
        <item>Wife</item>
        <item>Husband</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Sibling</item>
    </string-array>
    <string-array name="depenents_array1">
        <item>Mother</item>
        <item>Father</item>
        <item>Wife</item>
        <item>Husband</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Sibling</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_have_account">Don\'t have an account?</string>
    <string name="label_create_one">CREATE ONE NOW</string>
    <string name="label_forgot">Forgot Password?</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_already_have_account">Already have an account?</string>
    <string name="label_signin_now">SIGN IN NOW</string>
    <string name="label_email">Email</string>
    <string name="provide_email_number">Please provide email / number to continue</string>
    <string name="provide_password">Please provide password to continue</string>
    <string name="password_length_short">Password should contain 8 characters at least</string>
    <string name="label_first_name">First Name*</string>
    <string name="label_last_name">Last Name*</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_i_agree">I agree to the</string>
    <string name="label_signup">Register</string>
    <string name="label_search">Search</string>
    <string name="label_profile">Profile</string>
    <string name="label_settings">Settings</string>
    <string name="label_terms_conditions">By clicking on Register I agree with AugmentCare\'s Terms of Use</string>
    <string name="label_terms_link">Terms of Use</string>
    <string name="title_activity_splash">  </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error_enter_valid_name">Enter a valid Name</string>
    <string name="error_enter_valid_email">Enter a valid Email</string>
    <string name="error_enter_valid_phone">Enter a valid Phone Number</string>
    <string name="message_agree_terms">You must agree to terms and conditions!</string>
    <string name="message_free_appointment">You will not be charged for this appointment. Please click OK to confirm.</string>
    <string name="message_signup_successful">Thanks, You can Login now</string>
    <string name="title_dashboard">Dash Board</string>
    <string name="message_tnc">Terms &amp; Conditions
Use of the Site. AugmentCare Pte. Ltd. (“AugmentCare”, “we”, “us”, or “our”) operates the website located at www.augmentcare.com and other related websites with links to these Terms &amp; Conditions (collectively, the “Site”). We currently offer online telehealth services (the “Services”) enabling our members (“Members”, “Users” or “you”) to report their health history and engage healthcare professionals (“Treating Providers”, “Practitioners” or “Counsellors”) to obtain medical, healthcare and counselling services (“Services”). By accessing and using the Site, you agree to be bound by these Terms &amp; Conditions and all other terms and policies that appear on the Site. If you do not wish to be bound by any of these Terms &amp; Conditions, you may not use the Site or the Services.
Healthcare Services. All of the Treating Providers or Counsellors who deliver Services through AugmentCare are independent professionals solely responsible for the services each provides to you. AugmentCare does not practice medicine or any other licensed profession, and does not interfere with the practice of medicine or any other licensed profession by Treating Providers, each of whom is responsible for his or her services and compliance with the requirements applicable to his or her profession and license. Neither AugmentCare nor any third parties who promote the Services or provide you with a link to the Service shall be liable for any professional advice you obtain from a Treating Provider via the Services.
No Doctor Patient Relationship. No medical professional/patient relationship is created between AugmentCare and you through the use of the Site and/or Services.
Site Content. None of the Site content (other than information you receive from Treating Providers or Counsellors) should be considered medical advice or an endorsement, representation or warranty that any particular medication or treatment is safe, appropriate, or effective for you.
No Guarantee of Services. We have no control over, and cannot guarantee the availability of any Treating Provider at any particular time. We will not be liable for any cancelled or otherwise unfulfilled appointments, or any injury resulting therefrom, or any other injury resulting or arising from or related to the use of the Site or Services whatsoever. The Site and Services are susceptible to errors therefore their performance is not guaranteed.
Informed Consent.</string>
    <string name="title_tnc">Terms and Conditions</string>
    <string name="label_find_doctor">Find Doctors</string>
    <string name="label_my_consultations">Appointments</string>
    <string name="label_reports">Reports</string>
    <string name="message_exit">EXIT</string>
    <string name="message_are_you_sure">Are you sure ?</string>
    <string name="error_no_data">Unable to find data</string>
    <string name="label_name">Name</string>
    <string name="label_speciality">Speciality</string>
    <string name="label_condition">Condition</string>
    <string name="label_education">Education</string>
    <string name="label_book_online_consult">Book Online Consult</string>
    <string name="speclabel_ializes_in">Specializes In</string>
    <string name="label_ask_a_question">Ask a Question</string>
    <string name="error_check_internet">Please check your Internet connection</string>
    <string name="label_logout">Logout</string>
    <string-array name="days">
        <item>Su</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>Th</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string-array name="string_array_name">
        <item>text_string</item>
    </string-array>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="error_no_internet">Please check your Internet connection</string>
    <string name="label_retry">Retry</string>
    <string name="label_ask_question">ASK QUESTION</string>
    <string name="label_book_appointment">BOOK APPOINTMENT</string>
    <string name="label_verify">Verify</string>
    <string name="label_sign_in_with_google">Sign in with Google</string>
    <string name="label_my_doctors">MY DOCTORS</string>
    <string name="label_show_all">Show All</string>
    <string name="error_no_doctors_connected">You have not booked an appointment at AugmentCare before</string>
    <string name="label_find_doctors_by_speciality">By Specialization</string>
    <string name="label_find_doctors_by_condition">By Condition</string>
    <string name="label_upcoming_appointments">Upcoming Appointments</string>
    <string name="error_no_scheduled_appointments">No scheduled appointments. Find a doctor below to get started.</string>
    <string name="label_search_results">Search Results</string>
    <string name="label_my_previous_consultations">My Previous Consultations</string>
    <string name="label_phone_hint">300XXXXXXX</string>
    <string name="facebook_app_id">885619624947590</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_help">Help?</string>
    <string name="label_signin">SIGN IN</string>
    <string name="welcome_to_augmentcare">Welcome to AugmentCare.\nWe have got your health covered.\nLets Go!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="mobile_email">Mobile &amp; Email</string>
    <string name="sign_up_and_get_started_with_a_better_and_healthy_life">Sign up and get started with a \n better and healthy life</string>
    <string name="employee_code">Employee Code</string>
</resources>