<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.augmentcare.patient.fragments.SignInSignUpFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_ac_logo2" />

    <TextView
        android:id="@+id/tv_welcome_to_AC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/raleway"
        android:lineSpacingExtra="8sp"
        android:text="@string/welcome_to_augmentcare"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_green_gradient_round_cornered_background"
        android:drawableEnd="@drawable/ic_arrow_back_white"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/btn_green_gradient_border"
        android:drawableEnd="@drawable/ic_arrow_back_blue"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
