<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_50sdp"

        android:clickable="true"
        android:rotation="180"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_blue" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ac_logo_medium" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/raleway_bold"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/_26ssp"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_up_and_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/tv_sign_up_and_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/raleway"
        android:lineSpacingExtra="@dimen/_5ssp"
        android:text="@string/sign_up_and_get_started_with_a_better_and_healthy_life"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_140sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/btn_green_gradient_round_cornered_background"
        android:drawableStart="@drawable/ic_phone"
        android:fontFamily="@font/raleway_bold"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_50sdp"
        android:text= "@string/mobile_email"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/btn_employee_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_and_get_started" />

    <Button
        android:id="@+id/btn_employee_code"
        android:layout_width="0dp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/btn_employee_code"
        android:drawableStart="@drawable/ic_employee_code"
        android:fontFamily="@font/raleway_bold"
        android:paddingStart="@dimen/_22sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_35sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/employee_code"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/btn_google_sign_up"
        app:layout_constraintEnd_toEndOf="@id/btn_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btn_email"
        app:layout_constraintTop_toBottomOf="@id/btn_email" />


    <Button
        android:id="@+id/btn_google_sign_up"
        android:layout_width="0dp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/btn_google_rounded"
        android:fontFamily="@font/raleway_bold"
        android:paddingEnd="@dimen/_50sdp"
        android:paddingStart="@dimen/_20sdp"
        android:drawableStart="@drawable/ic_google_plus"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/tv_already_have_an_account"
        app:layout_constraintEnd_toEndOf="@id/btn_employee_code"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btn_employee_code"
        app:layout_constraintTop_toBottomOf="@id/btn_employee_code" />

    <TextView
        android:id="@+id/tv_already_have_an_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/raleway_bold"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>