<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:src="@drawable/ic_logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_bold"
        android:text="Family member Name"
        android:textColor="@color/colorText"
        android:textSize="@dimen/dimen_18sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"

        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etxtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_first_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextBlue"
                android:textSize="@dimen/dimen_18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etxtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextBlue"
                android:textSize="@dimen/dimen_18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--<Button
            android:id="@+id/btnNext"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/Button.Signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NEXT"
            android:minWidth="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            />-->

        <!--<com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />-->
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"

        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/green_button"
        android:minHeight="@dimen/main_button_height">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:orientation="horizontal"

            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:fontFamily="@font/lato_black"
                android:text="NEXT"
                android:textSize="@dimen/dimen_15sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow_green" />

        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/signincontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_already_have_account"
            android:textSize="@dimen/dimen_14sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/label_signin"
            android:textColor="@color/colorGreenButton"
            android:textSize="@dimen/dimen_14sp" />

    </LinearLayout>

</RelativeLayout>